# mmi-task-manager

./: .gitignore  README.md  pyproject.toml  tasks.json
src/cli/: main.py  style.py
src/cli/commands/: add_task.py  add_tasks_bulk.py  complete_task.py  delete_task.py  list_tasks.py  update_task.py
src/core/task/: exceptions.py  manager.py  models.py  services.py
src/db/: base.py
src/utils/: utils.py
